<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="100dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/resetPasswordMailEditText"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="Enter The Mail"
        android:textSize="25sp">


    </EditText>

    <EditText
        android:id="@+id/loginPasswordEditText"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_password"
        android:password="true"
        android:textSize="25sp">


    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/loginButton_2"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/login"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/forgetPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#E41A0B"

            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="#E60000"
            android:textSize="25sp"
            android:textStyle="bold|italic" />


    </LinearLayout>


</LinearLayout>